force-app/main/default/objects/AI_Human_Oversight_Record__c/AI_Human_Oversight_Record__c.object-meta.xml
<CustomObject>
    <label>AI Human Oversight Record</label>
    <pluralLabel>AI Human Oversight Records</pluralLabel>
    <nameField>
        <displayFormat>AHO-{0000000}</displayFormat>
        <label>Oversight Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>