force-app/main/default/objects/AI_Human_Oversight_Record__c/fields/AI_System__c.field-meta.xml
<CustomField>
    <fullName>AI_System__c</fullName>
    <label>AI System</label>
    <referenceTo>AI_System_Registry__c</referenceTo>
    <relationshipLabel>Human Oversight Records</relationshipLabel>
    <relationshipName>Human_Oversight_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>