force-app/main/default/objects/AI_Human_Oversight_Record__c/fields/Human_Decision__c.field-meta.xml
<CustomField>
    <fullName>Human_Decision__c</fullName>
    <label>Human Decision</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>