force-app/main/default/objects/AI_Human_Oversight_Record__c/fields/Original_AI_Output__c.field-meta.xml
<CustomField>
    <fullName>Original_AI_Output__c</fullName>
    <label>Original AI Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>