force-app/main/default/objects/AI_Human_Oversight_Record__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AI_Human_Oversight_Records</relationshipName>
    <type>Lookup</type>
</CustomField>